[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/robo/RoboExtra.gd" type="Script" id=2]
[ext_resource path="res://ui/8Way/8Way.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[node name="PlayerExtra" instance=ExtResource( 1 )]
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 52.0
margin_bottom = 360.0
alignment = 2

[node name="FlyDir" parent="VBoxContainer" index="0" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 272.0
margin_bottom = 334.0
alignment = 1
NW = false
W = false

[node name="FlyEnabled" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 335.0
margin_right = 52.0
margin_bottom = 347.0
text = "Fly"

[node name="ArmorEnabled" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 348.0
margin_right = 52.0
margin_bottom = 360.0
size_flags_vertical = 0
text = "Armor"
